# rws

./: compose.yaml
backend/entra/: Cargo.toml
backend/entra/src/: main.rs
backend/entra/src/auth/: jwt.rs  users.rs
backend/entra/src/migrations/: database.rs  revert.rs
backend/rws_s3/: Cargo.toml  Dockerfile
backend/rws_s3/src/: main.rs
backend/rws_s3/src/auth/: jwt.rs  permissions.rs  users.rs
backend/rws_s3/src/filesystem/: bucket.rs  object.rs
backend/rws_s3/src/migrations/: begin.rs  database.rs  permission_values.rs  revert.rs
backend/rws_s3/storage/hello/hi/my/name/is/: hcillel.txt
backend/rws_s3/storage/oriya2/f/: object_somthing.txt
backend/rws_s3/storage/s/dds/fe/: de.txt
backend/s3/: Dockerfile
backend/s3/src/: main.rs  utils.rs
backend/s3/src/auth/: jwt.rs
backend/s3/src/filesystem/: bucket.rs
backend/s3/src/migrations/: permission_values.rs  revert.rs
backend/sso/: .env  Cargo.toml
backend/sso/src/: main.rs
backend/sso/src/auth/: users.rs
backend/sso/src/migrations/: begin.rs
frontend/: package-lock.json  package.json  types.d.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/components/: LoadingPage.tsx  Sidebar.tsx  navbar.tsx  register-form.tsx  signin-form.tsx
frontend/app/context/: authContext.tsx
frontend/app/homepage/: layout.tsx  page.tsx
frontend/app/homepage/s3/: page.tsx
frontend/app/homepage/s4/: page.tsx
frontend/app/hooks/: useBucket.tsx
frontend/app/providers/: MyAuthProvider.tsx
frontend/app/register/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/utils/: helpers.ts
