[package]
name = "rws_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4",features = ["multipart"]}
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = "0.4.31"
md5 = "0.7.0"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = {version = "0.7.10", features=["with-uuid-1"]}
uuid = {version = "1.7.0",features = ["v4"]}
