[package]
name = "rws_s3"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = {version = "0.7.4",features = ["multipart"]}
axum-extra = { version = "0.9.2", features = ["cookie"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = "0.4.31"
dotenv = "0.15.0"
email_address = "0.2.4"
jsonwebtoken = "9.2.0"
md5 = "0.7.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.111"
time = "0.3.34"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = {version = "0.7.10", features=["with-uuid-1"]}
tower-http = {version = "0.5.1",features = ["cors","tower"]}
uuid = {version = "1.7.0",features = ["v4","serde"]}
